--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <h1>Hello World!</h1>
                     <h5 class="about-me">About Me</h5>
                     <p class="body-text">
-                        Upcoming Computer Science graduate with a strong technical foundation and a 
+                        Computer Science graduate with a strong technical foundation and a 
                         passion for innovative problem-solving and software development. 
                     </p>
                     <ul class="socials flex-row">
